[project]
name = "claudenlos"
version = "0.1.0"
description = "Claude Code tool-call analyser"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=13.0",
]

[project.scripts]
claudenlos = "claudenlos.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["claudenlos"]
